fixing white gap under images

--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -48,3 +48,9 @@
     color: $basicWhite;
   }
 }
+
+.advantages__picture {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
